<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CensusApp</string>
    <string name="action_settings">Settings</string>
    <string name="contact_name_hint">Enter Name</string>
    <string name="contact_phone_number_hint">Enter Phone Number</string>
    
    
     <string name="contact_street_hint">Enter Street</string>
      <string name="contact_city_hint">Enter City</string>
      
       <string name="contact_contact_checkBox">Contacted</string>
      <string name="fragment_contact_list_title">Contacts</string>
      <string name="list_item_contact_name">Name</string>
      <string name="list_item_contact_street">Street</string>
      
      <string name="contact_birthday">Enter Birthday</string>
    

</resources>
